--- a/SurvManager/appsettings.json
+++ b/SurvManager/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=pmdb1;Port=5432;User Id=postgres;Password=@#Hggi0790"
+  }
 }
