--- a/SurvManager/appsettings.json
+++ b/SurvManager/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=pmdb1;Port=5432;User Id=postgres;Password=@#Hggi0790"
+    "DefaultConnection": "Server=localhost;Database=pmdb1;Port=5432;User Id=postgres;Password=Pa$$W0rd"
   }
 }
