--- a/SurvManager/appsettings.json
+++ b/SurvManager/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Database=pmdb1;Port=5432;User Id=postgres;Password=Pa$$W0rd"
+    "Postgres": "Server=localhost;Database=pmdb1;Port=5432;User Id=postgres;Password=Pa$$W0rd",
+    "XApiKey": "pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp"
   }
 }
